--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2272,76 +2272,6 @@ body {
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
 }
-.cid-rFIDYPvy2y {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #2e2e2e;
-}
-.cid-rFIDYPvy2y .row-links {
-  width: 100%;
-  justify-content: center;
-}
-.cid-rFIDYPvy2y .social-row {
-  width: 100%;
-  justify-content: center;
-}
-.cid-rFIDYPvy2y .media-container-row {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.cid-rFIDYPvy2y .media-container-row .foot-menu {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 0;
-  margin-bottom: 0;
-}
-.cid-rFIDYPvy2y .media-container-row .foot-menu li {
-  padding: 0 1rem 1rem 1rem;
-}
-.cid-rFIDYPvy2y .media-container-row .foot-menu li p {
-  margin: 0;
-}
-.cid-rFIDYPvy2y .media-container-row .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-}
-.cid-rFIDYPvy2y .media-container-row .social-list .mbr-iconfont-social {
-  font-size: 1.5rem;
-  color: #ffffff;
-}
-.cid-rFIDYPvy2y .media-container-row .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-rFIDYPvy2y .media-container-row .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-rFIDYPvy2y .media-container-row .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-rFIDYPvy2y .media-container-row .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-.cid-rFIDYPvy2y .media-container-row .row-copirayt {
-  word-break: break-word;
-  width: 100%;
-}
-.cid-rFIDYPvy2y .media-container-row .row-copirayt p {
-  width: 100%;
-}
 .cid-rFIEhPptDL .navbar {
   padding: .5rem 0;
   background: #100f0f;
@@ -2730,4 +2660,74 @@ body {
 .cid-rFIEhPptDL .nav-link:hover,
 .cid-rFIEhPptDL .dropdown-item:hover {
   color: #c1c1c1 !important;
+}
+.cid-rFIFHuEKKf {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-image: url("../../../assets/images/jumbotron0.jpg");
+}
+.cid-rFIFHuEKKf .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-rFIFHuEKKf .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-rFIFHuEKKf .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-rFIFHuEKKf .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-rFIFHuEKKf .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-rFIFHuEKKf .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-rFIFHuEKKf .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-rFIFHuEKKf .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-rFIFHuEKKf .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rFIFHuEKKf .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rFIFHuEKKf .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rFIFHuEKKf .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-rFIFHuEKKf .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-rFIFHuEKKf .media-container-row .row-copirayt p {
+  width: 100%;
 }
